fix flyer title overflow

--- a/apps/kinowki-web/src/app/pages/exchange/exchange.component.sass
+++ b/apps/kinowki-web/src/app/pages/exchange/exchange.component.sass
@@ -65,12 +65,7 @@
   overflow: hidden
 
   .title
-    display: -webkit-box
-    -webkit-line-clamp: 2
-    -webkit-box-orient: vertical
-    -webkit-align-content: center
     overflow: hidden
-    text-overflow: ellipsis
     font-size: 0.75rem
 
   .date
